changed the description

--- a/Application/views/index.pug
+++ b/Application/views/index.pug
@@ -12,7 +12,7 @@ block content
             .success-text
                 p Success!
             .description
-                p GitHub workflow has been successfully setup, feel free to explore!
+                p GitHub workflow has been successfully setup
             .description
                 p Your Node.js Express app is up and running on Azure
 
