changed the header

--- a/Application/views/index.pug
+++ b/Application/views/index.pug
@@ -23,7 +23,7 @@ block content
       p
         a.btn.btn-default(href='https://help.github.com/en/github/creating-cloning-and-archiving-repositories/cloning-a-repository') Learn more &raquo;
     .col-md-4
-      h2 Continuous Delivery to Azure.
+      h2 Continuous Delivery
       p View your workflow on GitHub and customize it as per your needs
       p
         a.btn.btn-default(href='https://help.github.com/en/actions') Learn more &raquo;
